# cremniy

./: CMakeLists.txt  CONTRIBUTING_ru.md  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md  codeedittab.cpp  codeedittab.h  filecreatedialog.cpp  filecreatedialog.h  filetreeview.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: release.yml
codeeditor/: CMakeLists.txt
codeeditor/internal/: QCXXHighlighter.hpp  QPythonHighlighter.hpp
docs/: hotkey.md
src/: CMakeLists.txt
src/ToolTabs/CodeEditor/: codeeditortab.cpp
src/ToolTabs/CodeEditor/QCodeEditor/src/: QCodeEditor.cpp
src/ToolTabs/Disassembler/: disassemblertab.cpp
src/ToolTabs/HexEditor/: CMakeLists.txt  hexviewtab.cpp  hexviewtab.h
src/ToolTabs/HexEditor/FormatPages/RAW/: rawpage.cpp
src/app/IDEWindow/: idewindow.cpp
src/app/WelcomeWindow/: welcomeform.cpp
src/components/codeeditor/include/: QCodeEditor.hpp
src/components/codeeditor/resources/styles/: default_style.xml
src/components/codeeditor/src/: QCodeEditor.cpp  QLanguage.cpp  QSyntaxStyle.cpp
src/resources/styles/: style.qss
src/utils/: syncfiledata.cpp  syncfiledata.h
src/widgets/: filestabwidget.cpp  filetab.cpp  filetab.h  hexviewtab.cpp  tooltabwidget.cpp  tooltabwidget.h
